2006-11-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-tdep.c (arm_gdbarch_init): Handle EF_ARM_EABI_VER5.

2006-10-31  Vladimir Prus  <vladimir@codesourcery.com>
	
	* commands.h (enum command_class): Use different
	values for class_deprecated and class_run.
	* cli/cli-decode.c: (print_help_for_command): New.
	(apropos_cmd): Use the above.
	(help_list): Mention 'help all'
	and 'apropos' when printing top-level help.
	(help_all): Print the class name before printing
	commands in that class.  Don't print prefix commands
	here, instead pass recurse flag to help_cmd_list.
	Print list of unclassified commands at the end.
	(help_cmd_list): When recursing, use all_commands class.
	Recurse only if the class of the command matches.

2006-10-27  Andreas Schwab  <schwab@suse.de>

	* gdbcmd.h (detachlist): Declare.
	* infcmd.c (_initialize_infcmd): Define "detach" as prefix
	command.
	* linux-fork.c (_initialize_linux_fork): Rename
	"detach-checkpoint" to "detach checkpoint" and "detach-fork" to
	"detach fork".
	* cli/cli-cmds.c (detachlist): Define.
	(init_cmd_lists): Initialize it.
	* cli/cli-cmds.h (detachlist): Declare.

2006-10-25  Jim Blandy  <jimb@codesourcery.com>

	* p-valprint.c (pascal_object_print_value): Add 'static' keyword
	to function definition, to match declaration earlier in file.

2006-10-21  Paul Brook  <paul@codesourcery.com>

	* remote.c (remote_fetch_registers): Fix error message.

2006-10-20  Daniel Jacobowitz  <dan@codesourcery.com>

	* gcore.c (MAX_COPY_BYTES): Define.
	(gcore_copy_callback): Use it to limit allocation.

2006-10-19  Ulrich Weigand  <uweigand@de.ibm.com>

	* linux-thread-db.c (check_for_thread_db): Don't attempt to use
	thread_db for remote targets.
	* remote.c (remote_new_objfile): Always call predecessor on
	new_objfile event chain.

2006-10-19  Joel Brobecker  <brobecker@adacore.com>

	* solib.c (libpthread_solib_p): New function.
	(solib_add): Always read the symbols from the libpthread library.
